[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#zeromq = "0.3.4"
zmq = "0.10.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.83"
[lib]
name = "mylibrary"
crate-type = ["cdylib", "lib"]